fix border display problem on firefox

--- a/css/sponsstyle.css
+++ b/css/sponsstyle.css
@@ -357,13 +357,12 @@ optgroup {
  * Remove most spacing between table cells.
  */
 table {
-  border-collapse: collapse;
-  border-spacing: 0; }
+  /*border-collapse: collapse;*/
+  border-spacing: 10px; }
 
 td,
 th {
   padding: 0;
-  border: none;
 }
 
 /* Headings
@@ -2131,7 +2130,9 @@ header.sponsor-header {
         text-align: center;
         height: 4em;
         vertical-align: middle;
-        border: 10px solid white; }
+        /*border: 10px solid white;*/
+        
+      }
         #table table tr td a {
           color: white; }
       #table table tr td.money {
